--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -181,10 +181,10 @@ value for \pEm{2.5} and a linear relationship bewteen change in
 
 \end{methods}
 
-\begin{figure}[t]
-    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig1}}
-    \caption{Map of HHS Regions and metropolitan areas}\label{HHSmap}
-\end{figure}
+%% \begin{figure}[t]
+%%     \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig1}}
+%%     \caption{Map of HHS Regions and metropolitan areas}\label{HHSmap}
+%% \end{figure}
 
 \section{U.S. Metro-Regional Analysis}
 
