--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -222,7 +222,17 @@ undue influence by outliers.\ei
       $(\textrm{HHS01},\textrm{HHS02},\textrm{HHS09},\textrm{HHS10})$. The
       national means are displayed on the far right.  These four
       regions correspond to New England/NewYork and the West
-      Coast.}\label{meanMatrices}
+      Coast. The age classes are defined as in the original ITHIM
+      implementation using 8 eight age classes defined in terms of
+      years as follows: 1. 0--4, 2. 5--14, 3. 15--29, 4. 30--44,
+      5. 45--59, 6. 60--69, 7. 70--79, and 8. 80+. Age class 1 is
+      omitted from all calclulations in this paper due to lack of
+      data.}\label{meanMatrices}
+\end{figure}
+
+\begin{figure}[t]
+  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig4.pdf}}
+    \caption{California}\label{California}
 \end{figure}
 
 \section*{Acknowledgment}
